@startuml
'https://plantuml.com/class-diagram

!pragma layout smetana

class TemperatureSensorID {
    - id : String
}

class SensorTypeID {
    - id : String
}

class TemperatureSensor implements Sensor{
'Attributes'
- _sensorType: SensorType
- _value:temperatureSensorValue

'Methods'
+TemperatureSensor(catalogue: CatalogueSensor)
+getSensorType(): SensorType
+getValue(): Value
}

class TemperatureSensorValue implements Value {
    - _nValue : double
    + TemperatureSensor(nValue : double)
    + toString() : String
    + equals(other: ValueObject): Boolean
}

interface Sensor {
    + getSensorType() : SensorType
    + getValue() : Value
}

class SensorType {
    - _id : SensorTypeID
    - _description : String
    - _unit : Unit
    + SensorType(id : SensorTypeID, description : String, unit : Unit)
    + getId() : SensorTypeID
    + getDescription() : String
    + getUnit() : Unit
}

class ImpSensorTypeFactory implements SensorTypeFactory{
    + createSensorType(description : String, unit : Unit) : SensorType
}

interface SensorTypeFactory{
    + createSensorType(description : String, unit : Unit) : SensorType
}

class Unit {
    - _description : String
    + Unit(description : String)
    + getUnit() : String
    + getAllSupportedUnits() : List<String>
}

interface Value {
    + equals(other: ValueObject): Boolean
    + hashCode(): Int
}

class CatalogueSensor {
    - _sensorTypes : List<SensorType>
    - _listStringClassSensors : List<String>
    + CatalogueSensor(filePath: String)
    + getSensorType(description : String) : SensorType
}

class ImpSensorFactory implements SensorFactory {
    + createSensor() : Sensor
}

interface SensorFactory {
    + createSensor() : Sensor
}

class SensorRepository {
    + getSensor(sensorType : SensorType) : Sensor
}

CatalogueSensor --> TemperatureSensor : provides type info >
CatalogueSensor ..> SensorType : retrieves >
SensorType --> Unit : has
ImpSensorFactory ..> TemperatureSensor : creates >
SensorRepository ..> TemperatureSensor : manages >
ImpSensorTypeFactory ..> SensorType : creates >
ImpSensorTypeFactory ..> Unit : uses >
TemperatureSensorID ..> TemperatureSensor : identifies >
SensorTypeID ..> SensorType : identifies >

TemperatureSensor --> TemperatureSensorValue : has >
}

@enduml